# pkommand

./: .envrc  .gitignore  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
doc/runnable/: test_basic.py  test_wrapper.py
pkommand/: __init__.py  command.py  container.py  exceptions.py  parser.py  wrapper.py
tests/: test_command.py  test_parser.py  test_wrapper.py
