[build-system]
requires = [
    "setuptools>=43",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = [
  "F", # pyflakes
  "I", # isort
  "E", # pydocstyle
  "D",
  "W",
]
ignore = ["D203", "D212"]
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    ".ropeproject",
    ".pytest_cache",
    "__pycache__",
    ".coverage",
]
line-length = 120
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"**/{tests,doc}/*" = ["D"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.coverage.run]
omit = [
  ".tox/*",
  "tests/*",
  "doc/*",
]