[metadata]
name = pkommand
version = 0.3.1
author = berquerant
description = A small subcommand parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/berquerant/pkommand
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers

[options]
zip_safe = False
package_dir =
    pkommand = pkommand
packages =
    pkommand
include_package_data = True
python_requires = >= 3.10
